# LMS8Suite

ini/: 6.8GHz-downconvert-CHD.ini  7.5GHz-downconvert-CHD.ini
src/: CMakeLists.txt  lms8suite.fbp  lms8suiteApp.cpp  lms8suiteApp_gui.cpp  lms8suiteApp_gui.h
src/ADF4002/: ADF4002.cpp  ADF4002_wxgui.h
src/Si5351C/: Si5351C_wxgui.h
src/lms8001/: CMakeLists.txt  LMS8001.cpp  LMS8001.h
src/lms8001/connectionManager/: ConnectionCOM.cpp
src/lms8001_wxgui/: lms8001_pnlChannel_view.h  lms8001_pnlPLLProfiles_view.cpp  lms8001_pnlPLLProfiles_view.h
src/lms8cli/: CMakeLists.txt  lms8cli.cpp
src/utilities_gui/: SPI_wxgui.cpp  dlgTempCalibrate.cpp  utilities_gui.cpp  utilities_gui.fbp  utilities_gui.h
